- fixed mimer quoted_printable_io_slave that was returning a wrong len
09/04/2005 0.0.27
- hotmail.lua: A check to make sure that the stat page returned by hotmail is valid. (russell822)
- es: fixed rss (ncocchiaro)
- aol.lua: Updated AOL to handle the new interface. (russell822)
- es: *** empty log message *** (lisar314)
- hotmail.lua: Fixed a bunch of issues related to messages downloading as errors and more accurate stat counts for western languages. (russell822)
- updated some code to make gcc4.0-amd64 happy
- changed string find patten in serialize.lua (thanks flabdablet)
- fixed typos in popserver.c (ncocchiaro)
05/03/2005 0.0.26
- Mac OS X startup dir bug fixed (ncocchiaro)
- : fixed inline (gareuselesinge)
- es: *** empty log message *** (lisar314)
- yahoo.lua: fix multi-page stat and too long uidl's (russell822)
- fr: *** empty log message *** (fvancaen)
- es, fr: Updated slackware link (alessiofender)
- yahoo.lua: fixed some syntax problems and try to fix the multipage stat. (russell822)
- fr: accents (fvancaen)
- yahoo.lua: fixed crumb not being detected. (russell822)
- fr: temporary (fvancaen)
- es: fixed rss (gareuselesinge)
- yahoo.lua: Fixed a Top x 0 command (russell822)
- fixed mimer (thanks Russell)
- fixed bug in crypto_lua.c (missing #include)
30/01/2005 0.0.25
- libero.lua: Fixed to reflect webmail changes
- yahoo.lua: traduzione descrizione in italiano (ncocchiaro)
- tre.lua: another purge fix... (dpeddi)
- yahoo.lua: Fixed a variety of bugs including missing ending crlf and dealing with changing msgids (russell822)
- es, fr: changed slackware link (alessiofender)
- freepopsd.vbs: added rojous patch to delete log files from freepopsd.vbs (gareuselesinge)
- tre.lua: fixed problem with purge (dpeddi)
- fr: added fr website (gareuselesinge)
- fr: *** empty log message *** (fvancaen)
- es, fr: fixed rss (gareuselesinge)
- es: *** empty log message *** (lisar314)
- yahoo.lua: Some minor tweaks to yahoo. (russell822)